build: Add support for --enable-relocatable in mingw builds on Cygwin hosts.
Reported by Michele Locati <michele@locati.it> in
<https://lists.gnu.org/archive/html/bug-gettext/2024-09/msg00033.html>.

* gettext-runtime/configure.ac: Invoke gl_BUILD_TO_HOST_BINDIR.
* gettext-runtime/src/Makefile.am (*_CFLAGS): Fix value of INSTALLDIR.
* gettext-tools/configure.ac: Invoke gl_BUILD_TO_HOST_BINDIR,
gl_BUILD_TO_HOST_PKGLIBEXECDIR.
* gettext-tools/src/Makefile.am (*_CPPFLAGS): Fix value of INSTALLDIR.

--- a/gettext-tools/configure.ac
+++ b/gettext-tools/configure.ac
@@ -28,6 +28,11 @@ AC_CONFIG_HEADERS([config.h])
 dnl Installation directories.
 test "$docdir" != '${datarootdir}/doc/${PACKAGE_TARNAME}' || docdir='${datarootdir}/doc/gettext'
 
+dnl Define bindir_c and bindir_c_make.
+gl_BUILD_TO_HOST_BINDIR
+dnl Define pkglibexecdir_c and pkglibexecdir_c_make.
+gl_BUILD_TO_HOST_PKGLIBEXECDIR
+
 dnl Checks for programs.
 AC_PROG_CC
 AC_PROG_INSTALL
