--- a/gettext-runtime/configure.ac
+++ b/gettext-runtime/configure.ac
@@ -28,6 +28,9 @@ AC_CONFIG_HEADERS([config.h])
 dnl Installation directories.
 test "$docdir" != '${datarootdir}/doc/${PACKAGE_TARNAME}' || docdir='${datarootdir}/doc/gettext'
 
+dnl Define bindir_c and bindir_c_make.
+gl_BUILD_TO_HOST_BINDIR
+
 dnl Checks for programs.
 AC_PROG_CC
 AC_PROG_INSTALL
