build: Add support for --enable-relocatable in mingw builds on Cygwin hosts.
Reported by Michele Locati <michele@locati.it> in
<https://lists.gnu.org/archive/html/bug-gettext/2024-09/msg00033.html>.

* gettext-runtime/configure.ac: Determine bindir_c_make.
* gettext-runtime/src/Makefile.am (*_CFLAGS): Fix value of INSTALLDIR.
* gettext-tools/configure.ac: Determine bindir_c_make, pkglibdir_c_make.
* gettext-tools/src/Makefile.am (*_CPPFLAGS): Fix value of INSTALLDIR.

--- a/gettext-runtime/configure.ac
+++ b/gettext-runtime/configure.ac
@@ -1,5 +1,5 @@
 dnl Configuration for the gettext-runtime directory of GNU gettext
-dnl Copyright (C) 1995-2010, 2012-2015, 2018-2023 Free Software Foundation, Inc.
+dnl Copyright (C) 1995-2010, 2012-2015, 2018-2024 Free Software Foundation, Inc.
 dnl
 dnl This program is free software: you can redistribute it and/or modify
 dnl it under the terms of the GNU General Public License as published by
@@ -27,6 +27,26 @@ AC_CONFIG_HEADERS([config.h])
 
 dnl Installation directories.
 test "$docdir" != '${datarootdir}/doc/${PACKAGE_TARNAME}' || docdir='${datarootdir}/doc/gettext'
+
+dnl Define bindir_c and bindir_c_make.
+dnl Find the final value of bindir.
+gt_save_prefix="${prefix}"
+gt_save_exec_prefix="${exec_prefix}"
+gt_save_bindir="${bindir}"
+dnl Unfortunately, prefix and exec_prefix get only finally determined
+dnl at the end of configure.
+if test "X$prefix" = "XNONE"; then
+  prefix="$ac_default_prefix"
+fi
+if test "X$exec_prefix" = "XNONE"; then
+  exec_prefix='${prefix}'
+fi
+eval exec_prefix="$exec_prefix"
+eval bindir="$bindir"
+gl_BUILD_TO_HOST([bindir])
+bindir="${gt_save_bindir}"
+exec_prefix="${gt_save_exec_prefix}"
+prefix="${gt_save_prefix}"
 
 dnl Checks for programs.
 AC_PROG_CC
