--- a/gettext-runtime/src/Makefile.am
+++ b/gettext-runtime/src/Makefile.am
@@ -1,5 +1,5 @@
 ## Makefile for the gettext-runtime/src subdirectory of GNU gettext
-## Copyright (C) 1995-1998, 2000-2007, 2009, 2019, 2023 Free Software Foundation, Inc.
+## Copyright (C) 1995-1998, 2000-2007, 2009, 2019, 2023-2024 Free Software Foundation, Inc.
 ##
 ## This program is free software: you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
@@ -46,9 +46,9 @@ envsubst_SOURCES = envsubst.c
 LDADD = ../gnulib-lib/libgrt.a @LTLIBINTL@ @LTLIBICONV@ $(WOE32_LDADD)
 
 # Specify installation directory, for --enable-relocatable.
-gettext_CFLAGS = -DINSTALLDIR=\"$(bindir)\"
-ngettext_CFLAGS = -DINSTALLDIR=\"$(bindir)\"
-envsubst_CFLAGS = -DINSTALLDIR=\"$(bindir)\"
+gettext_CFLAGS = -DINSTALLDIR=$(bindir_c_make)
+ngettext_CFLAGS = -DINSTALLDIR=$(bindir_c_make)
+envsubst_CFLAGS = -DINSTALLDIR=$(bindir_c_make)
 if RELOCATABLE_VIA_LD
 gettext_LDFLAGS = `$(RELOCATABLE_LDFLAGS) $(bindir)`
 ngettext_LDFLAGS = `$(RELOCATABLE_LDFLAGS) $(bindir)`
