Refactor: Rename locating-rule.[hc].
* gettext-tools/src/locating-rules.h: Renamed from gettext-tools/src/locating-rule.h.
* gettext-tools/src/locating-rules.c: Renamed from gettext-tools/src/locating-rule.c.
* gettext-tools/src/FILES: Update.
* gettext-tools/src/Makefile.am (noinst_HEADERS, libgettextsrc_la_SOURCES): Update.
* gettext-tools/src/msgfmt.c: Update.
* gettext-tools/src/xgettext.c: Update.
* gettext-tools/po/POTFILES.in: Update.

--- a/gettext-tools/po/POTFILES.in
+++ b/gettext-tools/po/POTFILES.in
@@ -69,7 +69,7 @@ src/format-tcl.c
 src/hostname.c
 src/if-error.c
 src/its.c
-src/locating-rule.c
+src/locating-rules.c
 src/msgattrib.c
 src/msgcat.c
 src/msgcmp.c
