--- a/gettext-tools/its/Makefile.am
+++ b/gettext-tools/its/Makefile.am
@@ -1,5 +1,5 @@
 ## Makefile for the gettext-tools/its subdirectory of GNU gettext
-## Copyright (C) 2015, 2017 Free Software Foundation, Inc.
+## Copyright (C) 2015-2024 Free Software Foundation, Inc.
 ##
 ## This program is free software: you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
@@ -20,5 +20,28 @@ AUTOMAKE_OPTIONS = 1.2 gnits
 
 pkgdatadir = $(datadir)/gettext
 itsdir = $(pkgdatadir)$(PACKAGE_SUFFIX)/its
-dist_its_DATA = glade.loc glade1.its glade2.its gtkbuilder.its \
-gsettings.loc gsettings.its metainfo.loc metainfo.its
+
+ITS_FILES = \
+  glade1.its glade2.its gtkbuilder.its \
+  gsettings.its \
+  metainfo.its
+
+LOC_FILES = \
+  glade.loc \
+  gsettings.loc \
+  metainfo.loc
+
+dist_its_DATA = $(ITS_FILES) $(LOC_FILES)
+
+# Checks the XML files against their schemas.
+check-local:
+	@for file in $(ITS_FILES); do \
+	  echo "Checking $$file..."; \
+	  echo "$(XMLLINT) --noout --schema $(top_srcdir)/src/its.xsd $(srcdir)/$$file"; \
+	  $(XMLLINT) --noout --schema $(top_srcdir)/src/its.xsd $(srcdir)/$$file || exit 1; \
+	done
+	@for file in $(LOC_FILES); do \
+	  echo "Checking $$file..."; \
+	  echo "$(XMLLINT) --noout --schema $(top_srcdir)/src/locating-rules.xsd $(srcdir)/$$file"; \
+	  $(XMLLINT) --noout --schema $(top_srcdir)/src/locating-rules.xsd $(srcdir)/$$file || exit 1; \
+	done
