build: Add Windows-format metainfo also to libgettextlib and libgettextsrc.
Reported by Michele Locati <mlocati@gmail.com>
at <https://savannah.gnu.org/bugs/index.php?66267>.

* gettext-tools/gnulib-lib/libgettextlib.rc: New file.
* gettext-tools/gnulib-lib/Makefile.am (EXTRA_DIST): Add it.
(WOE32_LIBADD): New macro.
(libgettextlib.res.lo): New rule.
(libgettextlib_la_LIBADD, libgettextlib_la_DEPENDENCIES): Add the .res.lo file.
* gettext-tools/src/libgettextsrc.rc: New file.
* gettext-tools/src/Makefile.am (EXTRA_DIST): Add it.
(WOE32_LIBADD): New macro.
(libgettextsrc.res.lo): New rule.
(libgettextsrc_la_LIBADD, libgettextsrc_la_DEPENDENCIES): New macros.
* gettext-runtime/intl/libintl.rc: Update copyright year.
* gettext-runtime/libasprintf/libasprintf.rc: Likewise.
* gettext-tools/libgettextpo/libgettextpo.rc: Likewise.
* libtextstyle/lib/libtextstyle.rc: Likewise.
* windows/gettext.rc: Likewise.

--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,7 @@
 /gettext-tools/gnulib-m4/
 /gettext-tools/gnulib-lib/
 !/gettext-tools/gnulib-lib/Makefile.am
+!/gettext-tools/gnulib-lib/libgettextlib.rc
 /gettext-tools/gnulib-tests/
 !/gettext-tools/gnulib-tests/ChangeLog.0
 !/gettext-tools/gnulib-tests/Makefile.am
