--- a/gettext-tools/src/libgettextsrc.rc
+++ b/gettext-tools/src/libgettextsrc.rc
@@ -1,4 +1,4 @@
-/* Resources for asprintf.dll */
+/* Resources for gettextsrc.dll */
 
 #include <winver.h>
 
@@ -12,22 +12,22 @@ VS_VERSION_INFO VERSIONINFO
  FILEFLAGS 0x0L
 #endif
  FILEOS 0x10004L  /* VOS_DOS_WINDOWS32 */
- FILETYPE 0x2L  /* VFT_DLL */
+ FILETYPE 0x1L  /* VFT_APP */
  FILESUBTYPE 0x0L  /* VFT2_UNKNOWN */
 BEGIN
     BLOCK "StringFileInfo"
     BEGIN
         BLOCK "04090000"  /* Lang = US English, Charset = ASCII */
         BEGIN
-            VALUE "Comments", "This library is free software: you can redistribute it and/or modify it under the terms of the GNU Lesser General Public License. You should have received a copy of the GNU Lesser General Public License along with this library; if not, see <https://www.gnu.org/licenses/>.\0"
+            VALUE "Comments", "This library is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License. You should have received a copy of the GNU General Public License along with this program. If not, see <https://www.gnu.org/licenses/>.\0"
             VALUE "CompanyName", "Free Software Foundation\0"
-            VALUE "FileDescription", "LGPLed libasprintf for Windows\0"
+            VALUE "FileDescription", "GPLed library for Windows\0"
             VALUE "FileVersion", PACKAGE_VERSION_STRING "\0"
-            VALUE "InternalName", "asprintf.dll\0"
-            VALUE "LegalCopyright", "Copyright (C) 2002-2024\0"
+            VALUE "InternalName", "gettextsrc.dll\0"
+            VALUE "LegalCopyright", "Copyright (C) 1995-2024\0"
             VALUE "LegalTrademarks", "\0"
-            VALUE "OriginalFilename", "asprintf.dll\0"
-            VALUE "ProductName", "GNU libasprintf: automatic formatted output\0"
+            VALUE "OriginalFilename", "gettextsrc.dll\0"
+            VALUE "ProductName", "GNU gettext utilities\0"
             VALUE "ProductVersion", PACKAGE_VERSION_STRING "\0"
         END
     END
