build: Remove left-over files from the C# compiler of 'dotnet'.
* gettext-tools/src/Makefile.am (CLEANFILES): Add msgfmt.net.pdb,
msgunfmt.net.pdb.

--- a/gettext-tools/src/Makefile.am
+++ b/gettext-tools/src/Makefile.am
@@ -735,8 +735,8 @@ uninstall-java-no:
 EXTRA_DIST += msgfmt.cs msgunfmt.cs
 
 CLEANFILES += \
-  msgfmt.net.exe msgfmt.net.exe.mdb \
-  msgunfmt.net.exe msgunfmt.net.exe.mdb
+  msgfmt.net.exe msgfmt.net.exe.mdb msgfmt.net.pdb \
+  msgunfmt.net.exe msgunfmt.net.exe.mdb msgunfmt.net.pdb
 
 all-local: all-csharp-@BUILDCSHARP@
 all-csharp-yes: msgfmt.net.exe msgunfmt.net.exe
