its: Support DocBook XML, part 1.
Reported by Guillem Jover <guillem@hadrons.org>
at <https://savannah.gnu.org/bugs/?52415>.

* gettext-tools/its/docbook4.its: New file, copied from
https://github.com/itstool/itstool file its/docbook.its.
* gettext-tools/its/docbook5.its: New file, copied from
https://github.com/itstool/itstool file its/docbook5.its.
* gettext-tools/its/docbook.loc: New file.
* gettext-tools/its/Makefile.am (ITS_FILES): Add docbook4.its, docbook5.its.
(LOC_FILES): Add docbook.loc.

--- a/gettext-tools/its/Makefile.am
+++ b/gettext-tools/its/Makefile.am
@@ -24,12 +24,14 @@ itsdir = $(pkgdatadir)$(PACKAGE_SUFFIX)/its
 ITS_FILES = \
   glade1.its glade2.its gtkbuilder.its \
   gsettings.its \
-  metainfo.its
+  metainfo.its \
+  docbook4.its docbook5.its
 
 LOC_FILES = \
   glade.loc \
   gsettings.loc \
-  metainfo.loc
+  metainfo.loc \
+  docbook.loc
 
 dist_its_DATA = $(ITS_FILES) $(LOC_FILES)
 
