tests: Reorganize msgmerge tests.
* gettext-tools/tests/msgmerge-6: Renamed from gettext-tools/tests/msgmerge-9.
* gettext-tools/tests/msgmerge-7: Renamed from gettext-tools/tests/msgmerge-15.
* gettext-tools/tests/msgmerge-8: Renamed from gettext-tools/tests/msgmerge-17.
* gettext-tools/tests/Makefile.am (TESTS): Update.

--- a/gettext-tools/tests/Makefile.am
+++ b/gettext-tools/tests/Makefile.am
@@ -61,9 +61,9 @@ TESTS = gettext-1 gettext-2 \
 	msggrep-1 msggrep-2 msggrep-3 msggrep-4 msggrep-5 msggrep-6 msggrep-7 \
 	msggrep-8 msggrep-9 msggrep-10 msggrep-11 \
 	msginit-1 msginit-2 msginit-3 msginit-4 \
-	msgmerge-1 msgmerge-2 msgmerge-3 msgmerge-4 msgmerge-5 msgmerge-9 \
-	msgmerge-15 msgmerge-17 msgmerge-18 msgmerge-19 msgmerge-20 \
-	msgmerge-25 msgmerge-26 msgmerge-27 msgmerge-29 \
+	msgmerge-1 msgmerge-2 msgmerge-3 msgmerge-4 msgmerge-5 msgmerge-6 \
+	msgmerge-7 msgmerge-8 msgmerge-18 msgmerge-19 msgmerge-20 msgmerge-25 \
+	msgmerge-26 msgmerge-27 msgmerge-29 \
 	msgmerge-charset-1 msgmerge-charset-2 msgmerge-charset-3 \
 	msgmerge-compendium-1 msgmerge-compendium-2 msgmerge-compendium-3 \
 	msgmerge-compendium-4 msgmerge-compendium-5 msgmerge-compendium-6 \
