po: Assume a 'sed' that supports '#' for introducing comments.
This is standardized in POSIX since POSIX:2001 (= SUSv3).
It is supported on all platforms that I could test:
GNU, macOS 10.5, FreeBSD 5, NetBSD 7, OpenBSD 6, AIX 7, Solaris 10 and 11,
busybox (2019).

* gettext-runtime/po/insert-header.sed: Renamed from
gettext-runtime/po/insert-header.sin.
* gettext-runtime/po/Rules-quot (DISTFILES.common.extra1): Update.
(en@quot.insert-header, en@boldquot.insert-header): Use insert-header.sed
instead of insert-header.sin.
* autogen.sh: Update.
* Makefile.am (distcheck-hook): Update.
* gettext-tools/examples/hello-*/autogen.sh: Update.
* gettext-tools/doc/gettext.texi (po/LINGUAS): Update.

--- a/.gitignore
+++ b/.gitignore
@@ -410,7 +410,7 @@
 /gettext-tools/po/boldquot.sed
 /gettext-tools/po/en@boldquot.header
 /gettext-tools/po/en@quot.header
-/gettext-tools/po/insert-header.sin
+/gettext-tools/po/insert-header.sed
 /gettext-tools/po/quot.sed
 /gettext-tools/po/remove-potcdate.sin
 
