doc: Improve typography in man pages.
Patch by наб <nabijaczleweli@nabijaczleweli.xyz> in
<https://lists.gnu.org/archive/html/bug-gettext/2022-01/msg00019.html>.

* gettext-runtime/man/bind_textdomain_codeset.3.in: After "e.g." or "i.e.",
use \&.

--- a/gettext-runtime/man/bind_textdomain_codeset.3.in
+++ b/gettext-runtime/man/bind_textdomain_codeset.3.in
@@ -30,7 +30,7 @@ every software package has its own message domain.
 By default, the \fBgettext\fP family of functions returns translated messages
 in the locale's character encoding, which can be retrieved as
 \fBnl_langinfo (CODESET)\fP. The need for calling \fBbind_textdomain_codeset\fP
-arises for programs which store strings in a locale independent way (e.g.
+arises for programs which store strings in a locale independent way (e.g.\&
 UTF-8) and want to avoid an extra character set conversion on the returned
 translated messages.
 .PP
